# bobr

./: .gitignore  CMakeLists.txt  README.md
launch/: CCamera.cpp  CCamera.h  CEntity.cpp  CEntity.h  CGizmos.h  CMakeLists.txt  CModel.cpp  CModel.h  CModelEntity.cpp  CModelEntity.h  CMyString.h  CRotatingModel.h  CShader.cpp  CShader.h  CTexture.cpp  CTexture.h  ECS.cpp  ECS.h  FileSystemStuff.cpp  FileSystemStuff.h  ICamera.h  IEntity.h  drazdropermovich.cpp  shared.h
launch/assetcache/: assetcache.cpp
launch/cmd/: cmd.cpp  cmd.h
launch/entity/: CEntity.cpp  CEntity.h  CGizmos.cpp  CGizmos.h  CModelEntity.cpp  CModelEntity.h  CRotatingModel.cpp  ECS.cpp  ECS.h
public/: dbg.h  modelcache.hpp  mytypes.h  texturecache.hpp  vertex.hpp
public/assetcache/: assetcache.hpp
resources/shaders/: color.frag  color.shader  color.vert  default.frag  default.vert  default_new.frag  default_new.shader  default_new.vert
